force-app/main/default/objects/AgentCommissionsCodeMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Admission_Category__c</fullName>
        <label>Admission Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Centre_Code__c</fullName>
        <label>Cost Centre Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Code__c</fullName>
        <label>Fund Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Agent Commissions Code Mapping</label>
    <pluralLabel>Agent Commissions Code Mappings</pluralLabel>
</CustomObject>